<resources>
    <string name="app_name">SWAPI</string>
    <string name="name">Имя:</string>
    <string name="gender">Пол:</string>
    <string name="countStarships">Кол-во звездолетов:</string>
    <string name="model">модель</string>
    <string name="manufacturer">производитель</string>
    <string name="passengers">пассажиры</string>
    <string name="add">Добавить в избранное</string>
    <string name="go_to_favorite">Перейти в избранное</string>
    <string name="to_main">На главную</string>
    <string name="featured_characters">Избранные персонажи:</string>
    <string name="Starships">Зведолеты</string>
    <string name="сlear_favorites">Очистить избранное</string>
    <string name="enter_name">Введите название персонажа или звездолета</string>
    <string name="start_search">Начать поиск</string>
    <string name="serch_to">Искать по:</string>
    <string-array name="options">
        <item>персонажу</item>
        <item>звездолету</item>
    </string-array>
    >
</resources>